--- a/requirements.in
+++ b/requirements.in
@@ -4,8 +4,8 @@ channels
 coreapi
 dj-database-url
 django-cache-url
-django-celery-email
 django-celery-beat
+django-celery-email
 django-configurations
 django-contrib-comments
 django-crossdomainmedia
@@ -24,8 +24,8 @@ Django>=3.2,<3.3
 djangorestframework
 djangorestframework-csv
 djangorestframework-jsonp
-elasticsearch<8.0.0,>=7.0.0
 elasticsearch-dsl>=7.0.0<8.0.0
+elasticsearch<8.0.0,>=7.0.0
 geoip2
 icalendar
 lxml>=4.6.5
@@ -34,6 +34,7 @@ numpy>=1.21
 phonenumbers
 Pillow>=9.0.0
 psycopg2-binary
+pygtail>=0.12.0
 pyisemail
 pypdf2
 python-magic
